--- a/teddyweb.html
+++ b/teddyweb.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>teddy: a photo gallery </h1>
-    <p>  a photo gallery of the most emotionally intelligent, funny, cheese-loving dog I know! </p>
+    <p>  a photo gallery of the best dog I know! </p>
         <p>
             <img src = "dayOfAdoption.JPG" height = "200px"/>
         </p>
@@ -42,9 +42,7 @@
         <p>
             <img src = "rope.JPG" height = "200px"/>
         </p>
-        <p>whimsical playing.</p>
-        <p>
-            <img src = "christmas.JPG" height = "200px"/>
+    <p>whimsical playing.</p>
         <p>
             <img src = "dinosaur.JPG" height = "200px"/>
         </p>
@@ -84,6 +82,6 @@
         <p>
             <img src = "berk.JPG" height = "200px"/>
         </p>
-        <p>one and the same. I love this boy more than he loves warm laundry and peanut butter.</p>
+        <p>one and the same. I love this boy more than he loves warm laundry.</p>
 </body>
 </html>
