--- a/teddyweb.html
+++ b/teddyweb.html
@@ -8,6 +8,7 @@
 <body>
     <h1>teddy: a photo gallery </h1>
     <p>  a photo gallery of the best dog I know! </p>
+    <button>click if you love teds already</button>
         <p>
             <img src = "dayOfAdoption.JPG" height = "200px"/>
         </p>
@@ -83,5 +84,6 @@
             <img src = "berk.JPG" height = "200px"/>
         </p>
         <p>one and the same. I love this boy more than he loves warm laundry.</p>
+<a href = "https://www.instagram.com/pawsforteddy/">@pawsforteddy (teddy's instagram)</a>
 </body>
 </html>
